; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_me_cmp.c_hadamard8_diff8x8_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_me_cmp.c_hadamard8_diff8x8_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*, i64*, i32, i32)* @hadamard8_diff8x8_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hadamard8_diff8x8_c(i32* %0, i64* %1, i64* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca [64 x i32], align 16
  %13 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i64* %1, i64** %7, align 8
  store i64* %2, i64** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %13, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp eq i32 %14, 8
  %16 = zext i1 %15 to i32
  %17 = call i32 @av_assert2(i32 %16)
  store i32 0, i32* %11, align 4
  br label %18

18:                                               ; preds = %314, %5
  %19 = load i32, i32* %11, align 4
  %20 = icmp slt i32 %19, 8
  br i1 %20, label %21, label %317

21:                                               ; preds = %18
  %22 = load i32, i32* %11, align 4
  %23 = mul nsw i32 8, %22
  %24 = add nsw i32 %23, 0
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %11, align 4
  %29 = mul nsw i32 8, %28
  %30 = add nsw i32 %29, 1
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = load i64*, i64** %8, align 8
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* %11, align 4
  %37 = mul nsw i32 %35, %36
  %38 = add nsw i32 %37, 0
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i64, i64* %34, i64 %39
  %41 = load i64, i64* %40, align 8
  %42 = load i64*, i64** %7, align 8
  %43 = load i32, i32* %9, align 4
  %44 = load i32, i32* %11, align 4
  %45 = mul nsw i32 %43, %44
  %46 = add nsw i32 %45, 0
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i64, i64* %42, i64 %47
  %49 = load i64, i64* %48, align 8
  %50 = sub nsw i64 %41, %49
  %51 = load i64*, i64** %8, align 8
  %52 = load i32, i32* %9, align 4
  %53 = load i32, i32* %11, align 4
  %54 = mul nsw i32 %52, %53
  %55 = add nsw i32 %54, 1
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i64, i64* %51, i64 %56
  %58 = load i64, i64* %57, align 8
  %59 = load i64*, i64** %7, align 8
  %60 = load i32, i32* %9, align 4
  %61 = load i32, i32* %11, align 4
  %62 = mul nsw i32 %60, %61
  %63 = add nsw i32 %62, 1
  %64 = sext i32 %63 to i64
  %65 = getelementptr inbounds i64, i64* %59, i64 %64
  %66 = load i64, i64* %65, align 8
  %67 = sub nsw i64 %58, %66
  %68 = call i32 @BUTTERFLY2(i32 %27, i32 %33, i64 %50, i64 %67)
  %69 = load i32, i32* %11, align 4
  %70 = mul nsw i32 8, %69
  %71 = add nsw i32 %70, 2
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %72
  %74 = load i32, i32* %73, align 4
  %75 = load i32, i32* %11, align 4
  %76 = mul nsw i32 8, %75
  %77 = add nsw i32 %76, 3
  %78 = sext i32 %77 to i64
  %79 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %78
  %80 = load i32, i32* %79, align 4
  %81 = load i64*, i64** %8, align 8
  %82 = load i32, i32* %9, align 4
  %83 = load i32, i32* %11, align 4
  %84 = mul nsw i32 %82, %83
  %85 = add nsw i32 %84, 2
  %86 = sext i32 %85 to i64
  %87 = getelementptr inbounds i64, i64* %81, i64 %86
  %88 = load i64, i64* %87, align 8
  %89 = load i64*, i64** %7, align 8
  %90 = load i32, i32* %9, align 4
  %91 = load i32, i32* %11, align 4
  %92 = mul nsw i32 %90, %91
  %93 = add nsw i32 %92, 2
  %94 = sext i32 %93 to i64
  %95 = getelementptr inbounds i64, i64* %89, i64 %94
  %96 = load i64, i64* %95, align 8
  %97 = sub nsw i64 %88, %96
  %98 = load i64*, i64** %8, align 8
  %99 = load i32, i32* %9, align 4
  %100 = load i32, i32* %11, align 4
  %101 = mul nsw i32 %99, %100
  %102 = add nsw i32 %101, 3
  %103 = sext i32 %102 to i64
  %104 = getelementptr inbounds i64, i64* %98, i64 %103
  %105 = load i64, i64* %104, align 8
  %106 = load i64*, i64** %7, align 8
  %107 = load i32, i32* %9, align 4
  %108 = load i32, i32* %11, align 4
  %109 = mul nsw i32 %107, %108
  %110 = add nsw i32 %109, 3
  %111 = sext i32 %110 to i64
  %112 = getelementptr inbounds i64, i64* %106, i64 %111
  %113 = load i64, i64* %112, align 8
  %114 = sub nsw i64 %105, %113
  %115 = call i32 @BUTTERFLY2(i32 %74, i32 %80, i64 %97, i64 %114)
  %116 = load i32, i32* %11, align 4
  %117 = mul nsw i32 8, %116
  %118 = add nsw i32 %117, 4
  %119 = sext i32 %118 to i64
  %120 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %119
  %121 = load i32, i32* %120, align 4
  %122 = load i32, i32* %11, align 4
  %123 = mul nsw i32 8, %122
  %124 = add nsw i32 %123, 5
  %125 = sext i32 %124 to i64
  %126 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %125
  %127 = load i32, i32* %126, align 4
  %128 = load i64*, i64** %8, align 8
  %129 = load i32, i32* %9, align 4
  %130 = load i32, i32* %11, align 4
  %131 = mul nsw i32 %129, %130
  %132 = add nsw i32 %131, 4
  %133 = sext i32 %132 to i64
  %134 = getelementptr inbounds i64, i64* %128, i64 %133
  %135 = load i64, i64* %134, align 8
  %136 = load i64*, i64** %7, align 8
  %137 = load i32, i32* %9, align 4
  %138 = load i32, i32* %11, align 4
  %139 = mul nsw i32 %137, %138
  %140 = add nsw i32 %139, 4
  %141 = sext i32 %140 to i64
  %142 = getelementptr inbounds i64, i64* %136, i64 %141
  %143 = load i64, i64* %142, align 8
  %144 = sub nsw i64 %135, %143
  %145 = load i64*, i64** %8, align 8
  %146 = load i32, i32* %9, align 4
  %147 = load i32, i32* %11, align 4
  %148 = mul nsw i32 %146, %147
  %149 = add nsw i32 %148, 5
  %150 = sext i32 %149 to i64
  %151 = getelementptr inbounds i64, i64* %145, i64 %150
  %152 = load i64, i64* %151, align 8
  %153 = load i64*, i64** %7, align 8
  %154 = load i32, i32* %9, align 4
  %155 = load i32, i32* %11, align 4
  %156 = mul nsw i32 %154, %155
  %157 = add nsw i32 %156, 5
  %158 = sext i32 %157 to i64
  %159 = getelementptr inbounds i64, i64* %153, i64 %158
  %160 = load i64, i64* %159, align 8
  %161 = sub nsw i64 %152, %160
  %162 = call i32 @BUTTERFLY2(i32 %121, i32 %127, i64 %144, i64 %161)
  %163 = load i32, i32* %11, align 4
  %164 = mul nsw i32 8, %163
  %165 = add nsw i32 %164, 6
  %166 = sext i32 %165 to i64
  %167 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %166
  %168 = load i32, i32* %167, align 4
  %169 = load i32, i32* %11, align 4
  %170 = mul nsw i32 8, %169
  %171 = add nsw i32 %170, 7
  %172 = sext i32 %171 to i64
  %173 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %172
  %174 = load i32, i32* %173, align 4
  %175 = load i64*, i64** %8, align 8
  %176 = load i32, i32* %9, align 4
  %177 = load i32, i32* %11, align 4
  %178 = mul nsw i32 %176, %177
  %179 = add nsw i32 %178, 6
  %180 = sext i32 %179 to i64
  %181 = getelementptr inbounds i64, i64* %175, i64 %180
  %182 = load i64, i64* %181, align 8
  %183 = load i64*, i64** %7, align 8
  %184 = load i32, i32* %9, align 4
  %185 = load i32, i32* %11, align 4
  %186 = mul nsw i32 %184, %185
  %187 = add nsw i32 %186, 6
  %188 = sext i32 %187 to i64
  %189 = getelementptr inbounds i64, i64* %183, i64 %188
  %190 = load i64, i64* %189, align 8
  %191 = sub nsw i64 %182, %190
  %192 = load i64*, i64** %8, align 8
  %193 = load i32, i32* %9, align 4
  %194 = load i32, i32* %11, align 4
  %195 = mul nsw i32 %193, %194
  %196 = add nsw i32 %195, 7
  %197 = sext i32 %196 to i64
  %198 = getelementptr inbounds i64, i64* %192, i64 %197
  %199 = load i64, i64* %198, align 8
  %200 = load i64*, i64** %7, align 8
  %201 = load i32, i32* %9, align 4
  %202 = load i32, i32* %11, align 4
  %203 = mul nsw i32 %201, %202
  %204 = add nsw i32 %203, 7
  %205 = sext i32 %204 to i64
  %206 = getelementptr inbounds i64, i64* %200, i64 %205
  %207 = load i64, i64* %206, align 8
  %208 = sub nsw i64 %199, %207
  %209 = call i32 @BUTTERFLY2(i32 %168, i32 %174, i64 %191, i64 %208)
  %210 = load i32, i32* %11, align 4
  %211 = mul nsw i32 8, %210
  %212 = add nsw i32 %211, 0
  %213 = sext i32 %212 to i64
  %214 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %213
  %215 = load i32, i32* %214, align 4
  %216 = load i32, i32* %11, align 4
  %217 = mul nsw i32 8, %216
  %218 = add nsw i32 %217, 2
  %219 = sext i32 %218 to i64
  %220 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %219
  %221 = load i32, i32* %220, align 4
  %222 = call i32 @BUTTERFLY1(i32 %215, i32 %221)
  %223 = load i32, i32* %11, align 4
  %224 = mul nsw i32 8, %223
  %225 = add nsw i32 %224, 1
  %226 = sext i32 %225 to i64
  %227 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %226
  %228 = load i32, i32* %227, align 4
  %229 = load i32, i32* %11, align 4
  %230 = mul nsw i32 8, %229
  %231 = add nsw i32 %230, 3
  %232 = sext i32 %231 to i64
  %233 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %232
  %234 = load i32, i32* %233, align 4
  %235 = call i32 @BUTTERFLY1(i32 %228, i32 %234)
  %236 = load i32, i32* %11, align 4
  %237 = mul nsw i32 8, %236
  %238 = add nsw i32 %237, 4
  %239 = sext i32 %238 to i64
  %240 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %239
  %241 = load i32, i32* %240, align 4
  %242 = load i32, i32* %11, align 4
  %243 = mul nsw i32 8, %242
  %244 = add nsw i32 %243, 6
  %245 = sext i32 %244 to i64
  %246 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %245
  %247 = load i32, i32* %246, align 4
  %248 = call i32 @BUTTERFLY1(i32 %241, i32 %247)
  %249 = load i32, i32* %11, align 4
  %250 = mul nsw i32 8, %249
  %251 = add nsw i32 %250, 5
  %252 = sext i32 %251 to i64
  %253 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %252
  %254 = load i32, i32* %253, align 4
  %255 = load i32, i32* %11, align 4
  %256 = mul nsw i32 8, %255
  %257 = add nsw i32 %256, 7
  %258 = sext i32 %257 to i64
  %259 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %258
  %260 = load i32, i32* %259, align 4
  %261 = call i32 @BUTTERFLY1(i32 %254, i32 %260)
  %262 = load i32, i32* %11, align 4
  %263 = mul nsw i32 8, %262
  %264 = add nsw i32 %263, 0
  %265 = sext i32 %264 to i64
  %266 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %265
  %267 = load i32, i32* %266, align 4
  %268 = load i32, i32* %11, align 4
  %269 = mul nsw i32 8, %268
  %270 = add nsw i32 %269, 4
  %271 = sext i32 %270 to i64
  %272 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %271
  %273 = load i32, i32* %272, align 4
  %274 = call i32 @BUTTERFLY1(i32 %267, i32 %273)
  %275 = load i32, i32* %11, align 4
  %276 = mul nsw i32 8, %275
  %277 = add nsw i32 %276, 1
  %278 = sext i32 %277 to i64
  %279 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %278
  %280 = load i32, i32* %279, align 4
  %281 = load i32, i32* %11, align 4
  %282 = mul nsw i32 8, %281
  %283 = add nsw i32 %282, 5
  %284 = sext i32 %283 to i64
  %285 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %284
  %286 = load i32, i32* %285, align 4
  %287 = call i32 @BUTTERFLY1(i32 %280, i32 %286)
  %288 = load i32, i32* %11, align 4
  %289 = mul nsw i32 8, %288
  %290 = add nsw i32 %289, 2
  %291 = sext i32 %290 to i64
  %292 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %291
  %293 = load i32, i32* %292, align 4
  %294 = load i32, i32* %11, align 4
  %295 = mul nsw i32 8, %294
  %296 = add nsw i32 %295, 6
  %297 = sext i32 %296 to i64
  %298 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %297
  %299 = load i32, i32* %298, align 4
  %300 = call i32 @BUTTERFLY1(i32 %293, i32 %299)
  %301 = load i32, i32* %11, align 4
  %302 = mul nsw i32 8, %301
  %303 = add nsw i32 %302, 3
  %304 = sext i32 %303 to i64
  %305 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %304
  %306 = load i32, i32* %305, align 4
  %307 = load i32, i32* %11, align 4
  %308 = mul nsw i32 8, %307
  %309 = add nsw i32 %308, 7
  %310 = sext i32 %309 to i64
  %311 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %310
  %312 = load i32, i32* %311, align 4
  %313 = call i32 @BUTTERFLY1(i32 %306, i32 %312)
  br label %314

314:                                              ; preds = %21
  %315 = load i32, i32* %11, align 4
  %316 = add nsw i32 %315, 1
  store i32 %316, i32* %11, align 4
  br label %18

317:                                              ; preds = %18
  store i32 0, i32* %11, align 4
  br label %318

318:                                              ; preds = %461, %317
  %319 = load i32, i32* %11, align 4
  %320 = icmp slt i32 %319, 8
  br i1 %320, label %321, label %464

321:                                              ; preds = %318
  %322 = load i32, i32* %11, align 4
  %323 = add nsw i32 0, %322
  %324 = sext i32 %323 to i64
  %325 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %324
  %326 = load i32, i32* %325, align 4
  %327 = load i32, i32* %11, align 4
  %328 = add nsw i32 8, %327
  %329 = sext i32 %328 to i64
  %330 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %329
  %331 = load i32, i32* %330, align 4
  %332 = call i32 @BUTTERFLY1(i32 %326, i32 %331)
  %333 = load i32, i32* %11, align 4
  %334 = add nsw i32 16, %333
  %335 = sext i32 %334 to i64
  %336 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %335
  %337 = load i32, i32* %336, align 4
  %338 = load i32, i32* %11, align 4
  %339 = add nsw i32 24, %338
  %340 = sext i32 %339 to i64
  %341 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %340
  %342 = load i32, i32* %341, align 4
  %343 = call i32 @BUTTERFLY1(i32 %337, i32 %342)
  %344 = load i32, i32* %11, align 4
  %345 = add nsw i32 32, %344
  %346 = sext i32 %345 to i64
  %347 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %346
  %348 = load i32, i32* %347, align 4
  %349 = load i32, i32* %11, align 4
  %350 = add nsw i32 40, %349
  %351 = sext i32 %350 to i64
  %352 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %351
  %353 = load i32, i32* %352, align 4
  %354 = call i32 @BUTTERFLY1(i32 %348, i32 %353)
  %355 = load i32, i32* %11, align 4
  %356 = add nsw i32 48, %355
  %357 = sext i32 %356 to i64
  %358 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %357
  %359 = load i32, i32* %358, align 4
  %360 = load i32, i32* %11, align 4
  %361 = add nsw i32 56, %360
  %362 = sext i32 %361 to i64
  %363 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %362
  %364 = load i32, i32* %363, align 4
  %365 = call i32 @BUTTERFLY1(i32 %359, i32 %364)
  %366 = load i32, i32* %11, align 4
  %367 = add nsw i32 0, %366
  %368 = sext i32 %367 to i64
  %369 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %368
  %370 = load i32, i32* %369, align 4
  %371 = load i32, i32* %11, align 4
  %372 = add nsw i32 16, %371
  %373 = sext i32 %372 to i64
  %374 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %373
  %375 = load i32, i32* %374, align 4
  %376 = call i32 @BUTTERFLY1(i32 %370, i32 %375)
  %377 = load i32, i32* %11, align 4
  %378 = add nsw i32 8, %377
  %379 = sext i32 %378 to i64
  %380 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %379
  %381 = load i32, i32* %380, align 4
  %382 = load i32, i32* %11, align 4
  %383 = add nsw i32 24, %382
  %384 = sext i32 %383 to i64
  %385 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %384
  %386 = load i32, i32* %385, align 4
  %387 = call i32 @BUTTERFLY1(i32 %381, i32 %386)
  %388 = load i32, i32* %11, align 4
  %389 = add nsw i32 32, %388
  %390 = sext i32 %389 to i64
  %391 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %390
  %392 = load i32, i32* %391, align 4
  %393 = load i32, i32* %11, align 4
  %394 = add nsw i32 48, %393
  %395 = sext i32 %394 to i64
  %396 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %395
  %397 = load i32, i32* %396, align 4
  %398 = call i32 @BUTTERFLY1(i32 %392, i32 %397)
  %399 = load i32, i32* %11, align 4
  %400 = add nsw i32 40, %399
  %401 = sext i32 %400 to i64
  %402 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %401
  %403 = load i32, i32* %402, align 4
  %404 = load i32, i32* %11, align 4
  %405 = add nsw i32 56, %404
  %406 = sext i32 %405 to i64
  %407 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %406
  %408 = load i32, i32* %407, align 4
  %409 = call i32 @BUTTERFLY1(i32 %403, i32 %408)
  %410 = load i32, i32* %11, align 4
  %411 = add nsw i32 0, %410
  %412 = sext i32 %411 to i64
  %413 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %412
  %414 = load i32, i32* %413, align 4
  %415 = load i32, i32* %11, align 4
  %416 = add nsw i32 32, %415
  %417 = sext i32 %416 to i64
  %418 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %417
  %419 = load i32, i32* %418, align 4
  %420 = call i64 @BUTTERFLYA(i32 %414, i32 %419)
  %421 = load i32, i32* %11, align 4
  %422 = add nsw i32 8, %421
  %423 = sext i32 %422 to i64
  %424 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %423
  %425 = load i32, i32* %424, align 4
  %426 = load i32, i32* %11, align 4
  %427 = add nsw i32 40, %426
  %428 = sext i32 %427 to i64
  %429 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %428
  %430 = load i32, i32* %429, align 4
  %431 = call i64 @BUTTERFLYA(i32 %425, i32 %430)
  %432 = add nsw i64 %420, %431
  %433 = load i32, i32* %11, align 4
  %434 = add nsw i32 16, %433
  %435 = sext i32 %434 to i64
  %436 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %435
  %437 = load i32, i32* %436, align 4
  %438 = load i32, i32* %11, align 4
  %439 = add nsw i32 48, %438
  %440 = sext i32 %439 to i64
  %441 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %440
  %442 = load i32, i32* %441, align 4
  %443 = call i64 @BUTTERFLYA(i32 %437, i32 %442)
  %444 = add nsw i64 %432, %443
  %445 = load i32, i32* %11, align 4
  %446 = add nsw i32 24, %445
  %447 = sext i32 %446 to i64
  %448 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %447
  %449 = load i32, i32* %448, align 4
  %450 = load i32, i32* %11, align 4
  %451 = add nsw i32 56, %450
  %452 = sext i32 %451 to i64
  %453 = getelementptr inbounds [64 x i32], [64 x i32]* %12, i64 0, i64 %452
  %454 = load i32, i32* %453, align 4
  %455 = call i64 @BUTTERFLYA(i32 %449, i32 %454)
  %456 = add nsw i64 %444, %455
  %457 = load i32, i32* %13, align 4
  %458 = sext i32 %457 to i64
  %459 = add nsw i64 %458, %456
  %460 = trunc i64 %459 to i32
  store i32 %460, i32* %13, align 4
  br label %461

461:                                              ; preds = %321
  %462 = load i32, i32* %11, align 4
  %463 = add nsw i32 %462, 1
  store i32 %463, i32* %11, align 4
  br label %318

464:                                              ; preds = %318
  %465 = load i32, i32* %13, align 4
  ret i32 %465
}

declare dso_local i32 @av_assert2(i32) #1

declare dso_local i32 @BUTTERFLY2(i32, i32, i64, i64) #1

declare dso_local i32 @BUTTERFLY1(i32, i32) #1

declare dso_local i64 @BUTTERFLYA(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
